k8s/manifests/StateFulSet/datamanagment-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: datamanagement-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: datamanagement
  template:
    metadata:
      labels:
        app: datamanagement
    spec:
      containers:
      - name: datamanagement
        image: saturn0912/datamanagement:v1.1
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /data
          name: datamanage-storage  # Имя должно совпадать с именем в volumes
      volumes:
      - name: datamanage-storage  # Имя должно совпадать с именем в volumeMounts
        persistentVolumeClaim:
          claimName: datamanage-pvc
