k8s/manifests/StateFulSet/datamanage-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datamanage-app
spec:
  clusterIP: None
  selector:
    app: datamanage-app
  ports:
    - port: 5000
      targetPort: 5000
