k8s/manifests/StateFulSet/datamanagement-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datamanagement-service
spec:
  type: NodePort
  selector:
    app: datamanage-app
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30598
