k8s/manifests/StateFulSet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datamanage-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - data.manage.com
    secretName: datamanagement-tls
  rules:
  - host: data.manage.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: datamanagement-service
            port:
              number: 80
